# mini-world

./: Cargo.toml  DESIGN.md  README.md
crates/mw-agents/: Cargo.toml
crates/mw-agents/src/: habits.rs  lib.rs  obs.rs  persona.rs  soul.rs
crates/mw-core/: Cargo.toml
crates/mw-core/src/: contracts.rs  entity.rs  hash.rs  intent.rs  lib.rs  pack.rs  rng.rs  world.rs
crates/mw-core/tests/: determinism.rs
crates/mw-host/: Cargo.toml
crates/mw-host/src/: http.rs  lib.rs  main.rs
crates/mw-host/tests/: e2e.rs
crates/mw-neural/: Cargo.toml
crates/mw-neural/src/: lib.rs
crates/mw-runtime/: Cargo.toml
crates/mw-runtime/src/: dto.rs  lib.rs
crates/mw-runtime/tests/: dto_fixtures.rs  parity.rs
crates/mw-sim/: Cargo.toml
crates/mw-sim/src/: dialogue.rs  director.rs  lib.rs  main.rs  soak.rs  trajectory.rs  view.rs
crates/mw-sim/tests/: controller_parity.rs  soak.rs
crates/mw-text/: Cargo.toml
crates/mw-text/src/: lib.rs
crates/mw-village/: Cargo.toml
crates/mw-village/src/: lib.rs  needs.rs
docs/: web-ui-simulation-plan.md
scripts/: bench_text.sh  demo.sh
training/: OMNI.md
training/artifacts/: spark_prompts.jsonl
training/mw_training/: __init__.py  omni.py  persona.py  spark_dataset.py  train_omni.py
training/tests/: test_persona.py  test_spark_dataset.py
web/: index.html  package-lock.json  package.json  playwright.config.ts  vite.config.ts  vitest.config.ts
web/e2e/: observatory.spec.ts
web/src/: App.tsx  MapView.test.tsx  MapView.tsx  api.ts  styles.css  test-setup.ts  types.ts  useSimulation.ts
web/src/styles/: tokens.css
(+1 files in other folders)
