[package]
name = "mw-host"
edition.workspace = true
version.workspace = true
publish.workspace = true

[[bin]]
name = "mw-host"
path = "src/main.rs"

[dependencies]
mw-runtime = { path = "../mw-runtime" }
mw-core.workspace = true
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "net", "time", "signal"] }
axum = "0.7"
serde.workspace = true
serde_json.workspace = true
tokio-stream = { version = "0.1", features = ["sync"] }
[dev-dependencies]
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
